crates/macros/tests/ui/fail/on_struct.stderr
error: `#[fittings::service]` can only be applied to traits
 --> tests/ui/fail/on_struct.rs:2:1
  |
2 | struct NotATrait;
  | ^^^^^^
